--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>this is copy website</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
           <!--header end start here-->
