--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>this is copy website</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
           <!--header end start here-->
@@ -18,10 +19,10 @@
             </div>
             <div class="menubar">
               <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Service</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="service.html">Service</a></li>
+                <li><a href="contact.html">Contact</a></li>
               </ul>
               <button><a href="#">Click Me</a></button>
             </div>
